tests/sksl/errors/Ossfuzz40479.glsl
### Compilation failed:

error: 1: value is out of range for type 'int': 4016112253
void[4016112253 .r1r
     ^^^^^^^^^^
error: 1: array size must be an integer
void[4016112253 .r1r
     ^^^^^^^^^^^^^^^
error: 10: expected ']', but found ''
error: 1: type 'void' may not be used in an array
void[4016112253 .r1r
^^^^^^^^^^^^^^^^^^^^...
error: 10: expected an identifier, but found ''
5 errors
